--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
-os: osx
+language: objective-c
 osx_image: xcode10.2
+xcode_workspace: KoinSwift.xcworkspace
 env:
   global:
     - IOS_FRAMEWORK_SCHEME="KoinSwift iOS"
@@ -9,7 +10,24 @@ env:
     - DESTINATION="platform=iOS Simulator,name=iPhone 6,OS=12.1" SCHEME="$IOS_FRAMEWORK_SCHEME"
     - DESTINATION="platform=tvOS Simulator,name=Apple TV,OS=12.1" SCHEME="$TVOS_FRAMEWORK_SCHEME"
     - DESTINATION="arch=x86_64" SCHEME="$MACOS_FRAMEWORK_SCHEME"
+
 script:
   - set -o pipefail
   - xcodebuild -version
-  - xcodebuild -workspace KoinSwift.xcworkspace -scheme "$SCHEME" -destination "$DESTINATION" clean build test | xcpretty
+  - xcodebuild -workspace "$TRAVIS_XCODE_WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" clean build test | xcpretty
+  
+before_deploy:
+  - brew update
+  - brew outdated carthage || brew upgrade carthage
+  - carthage version
+  - carthage build --no-skip-current --platform ios,tvos,mac
+  - carthage archive KoinSwift
+deploy:
+  provider: releases
+  api_key:
+    secure: 
+  file: KoinSwift.framework.zip
+  skip_cleanup: true
+  on:
+    repo: InsertKoin/koin-swift
+    tags: true
