--- a/KoinSwift/KoinSwift iOS/Info.plist
+++ b/KoinSwift/KoinSwift iOS/Info.plist
@@ -15,8 +15,10 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>$(LIBRARY_VERSION)</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 </dict>
 </plist>
